# counterpoint

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.sqlx/: query-19674a25e9d88b4a78eb84c2e75b8ffda01477d9283ae7d7b55d26bd17c4014c.json  query-1dddd3ab52c6929c1c43b2027ee83456f9ff7b0fc463d31ebd3cd27f68a83ca9.json  query-45e8f983b2c8ed5eb4040fc161aaf5d9c419114489b79594a71fbb31bacf4f82.json  query-464f3360cf41d0fdd9c359e03ae6a66da591db8e95c3a39ac16e4bfb49fac6d6.json  query-5079158030226ec35e3677bbb6f4eb860e02e362363d813c972748aa823da14c.json  query-74542429c508a13b7a5b503914cbab92bc7225419288362c18c70eebac8d7d73.json  query-84c3e7e0a5ced5fca28331932dada39e681a2697ad167ac3759372e4b048d57b.json  query-912e72c2d96caa9915c09588d54c920bead3d1baa5a1a902f5a0916c3ff9d79c.json  query-b6c5b42fddd13a8b8c8de55d96afbbebb276d31f47456ba078e813577a94c5c4.json  query-f19a739e94cc81857db65207af7a6e4491b7f1b2b0d9495d3cade7487b898c8b.json
dev-tools/: create_dev_cert.conf  create_dev_cert.sh  manual_dev_test.sh
settings/: dev.toml  release.toml
sql/: create_tables.sql
src/: lib.rs  main.rs
src/application_impl/: auth_service_fake.rs  auth_service_impl.rs  captcha_service_fake.rs  captcha_service_impl.rs  conversation_service_impl.rs  mod.rs  relationship_service_impl.rs  user_service_impl.rs
src/application_port/: auth_service.rs  captcha_service.rs  conversation_service.rs  mod.rs  relationship_service.rs  user_service.rs
src/chat/: fake_chat.rs  message.rs
src/domain/: auth_service_impl.rs  captcha_service_impl.rs  chat.rs  conversation_service_impl.rs  fake_captcha_service.rs  mod.rs  relationship_service_impl.rs  service.rs  user.rs  user_service_impl.rs
src/domain_model/: captcha.rs  conversation.rs  friend.rs  group.rs  key.rs  message.rs  mod.rs  stream.rs  unit.rs  user.rs
src/domain_port/: auth_repo.rs  auth_session_store.rs  captcha_store.rs  conversation_repo.rs  conversation_role_repo.rs  friendship_repo.rs  group_idem_repo.rs  group_repo.rs  message_repo.rs  mod.rs  outbox_repo.rs  repo_tx.rs  user_repo.rs
src/infra/: auth_repo_impl.rs  auth_session_store_impl.rs  captcha_store_impl.rs  captcha_validate.lua  conversation_repo_impl.rs  conversation_role_repo_impl.rs  friendship_repo_impl.rs  group_repo_impl.rs  (+8 more)
(+32 files in other folders)
