[package]
name = "counterpoint"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98" }
argon2 = { version = "0.6.0-pre.1" }
async-trait = { version = "0.1.88" }
captcha-rs = { version = "0.2.11" }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
config = { version = "0.15.11" }
dashmap = { version = "7.0.0-rc2" }
futures-util = { version = "0.3.31" }
jsonwebtoken = { version = "9.3.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
thiserror = { version = "2.0.12" }
tokio = { version = "1.45.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "v5", "serde"] }
warp = { version = "0.3.7", features = ["tls"] }
